Fix login styling on small screens

--- a/web/static/css/application.sass
+++ b/web/static/css/application.sass
@@ -363,7 +363,7 @@ body
     margin-right: auto
     width: $control-width
   header
-    margin-top: 35px
+    padding-top: 15px
   input[type="email"]
     color: black
     font-size: $input-font-size
@@ -382,6 +382,9 @@ body
     width: $control-width
     background-color: $login-button-background-color
     color: $login-button-foreground-color
+    border: none
+    border-radius: 2px
+    padding: 5px
 
 .userdetails
   padding-left: 15px
